[package]
name = "hello-pi-zero"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0", features = ["serde"] }
ds18b20 = "0"
embedded-graphics = "0"
embedded-hal = "0"
env_logger = "0"
log = "0"
profont = "0"
reqwest = { version = "0", default-features = false, features = ["gzip", "json", "rustls-tls"] }
rppal = { version = "0", features = ["hal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sh1106 = "0"
tokio = { version = "1", features = ["full"] }
